[package]
name = "fastforward"
version = "0.1.0"
repository = "https://github.com/bpmason1/fastforward"
authors = ["Brian Mason <bpmason1@hotmail.com>"]
license = "MIT"
description = "a library for implementing custom reverse proxies"
readme = "README.md"
keywords = ["http", "proxy", "networking"]
categories = ["network-programming"]
edition = "2018"

exclude = [
	"*.md",
	"tests/*"
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]


[dependencies]
flask = "1.0.0"
http = "0.2.0"
num_cpus = "1.11.1"
rayon = "1.3.0"
# serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1

