[package]
name = "fastforward"
version = "0.4.1"
repository = "https://github.com/bpmason1/fastforward"
authors = ["Brian Mason <bpmason1@hotmail.com>"]
license = "MIT"
description = "a library for implementing custom reverse proxies"
readme = "README.md"
keywords = ["http", "proxy", "networking"]
categories = ["network-programming", "web-programming"]
edition = "2018"

exclude = [
	"*.md",
	"tests/*"
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]


[dependencies]
# flask = { path = "../flask-rs" }
flask = "2.0.2"
http = "0.2"
num_cpus = "1.13.0"
rayon = "1.3.0"
# serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1

