[package]
name = "bottle"
version = "0.1.0"
authors = ["Brian Mason <bpmason1@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.0"
nom = { version = "5.1.0", features = ["regexp"] }
streambuf = { path = "../streambuf" }
